WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51701
[Qt] Fix compilation with Qt in namespace
https://bugs.webkit.org/show_bug.cgi?id=51701
Summary
[Qt] Fix compilation with Qt in namespace
Kent Hansen
Reported
2010-12-29 05:17:28 PST
Originally fixed in
http://trac.webkit.org/changeset/31899
, but later changes broke this again.
Attachments
Patch
(6.21 KB, patch)
2010-12-29 05:25 PST
,
Kent Hansen
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Hansen
Comment 1
2010-12-29 05:25:07 PST
Created
attachment 77612
[details]
Patch
Kent Hansen
Comment 2
2010-12-29 05:41:44 PST
Committed
r74741
: <
http://trac.webkit.org/changeset/74741
>
WebKit Review Bot
Comment 3
2010-12-29 08:20:07 PST
http://trac.webkit.org/changeset/74741
might have broken Leopard Intel Debug (Tests)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug