2010-12-29  Kent Hansen  <kent.hansen@nokia.com>

Reviewed by Simon Hausmann.

        [Qt] Fix compilation with Qt in namespace
        https://bugs.webkit.org/show_bug.cgi?id=51701

        * QtTestBrowser/webview.h:

2010-12-29  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix compilation with Qt in namespace
        https://bugs.webkit.org/show_bug.cgi?id=51701

        * platform/graphics/ContextShadow.h:
        * platform/graphics/GraphicsContext3D.h:
        * platform/network/NetworkingContext.h:
        * platform/network/qt/QtNAMThreadSafeProxy.h:
        * plugins/PluginView.h:

2010-12-29  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Fix compilation with Qt in namespace
        https://bugs.webkit.org/show_bug.cgi?id=51701

        * Api/qwebkitplatformplugin.h:
        * WebCoreSupport/InspectorServerQt.h:
        * tests/hybridPixmap/widget.h:

Canonical link: https://commits.webkit.org/65080@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74741 268f45cc-cd09-0410-ab3c-d52691b4dbfc