WebKit/qt/WebCoreSupport/InspectorServerQt.h
@@ -27,8 +27,10 @@
 #include <QString>
 #include <wtf/Forward.h>
 
+QT_BEGIN_NAMESPACE
 class QTcpServer;
 class QTcpSocket;
+QT_END_NAMESPACE
 class QWebPage;
 
 namespace WebCore {
