WebKit/qt/tests/hybridPixmap/widget.h
@@ -27,9 +27,11 @@
 
 typedef QWebView WebView;
 
+QT_BEGIN_NAMESPACE
 namespace Ui {
 class Widget;
 }
+QT_END_NAMESPACE
 
 class Widget : public QWidget {
     Q_OBJECT
